--- a/styles/home.css
+++ b/styles/home.css
@@ -39,7 +39,7 @@
     color: var(--lt);
     z-index:2;
     border-radius: 2px;
-    max-width:calc(var(--winWidth) - 100px);
+    max-width:calc(var(--vw) - 100px);
     font-weight: 500;
 }
 
@@ -119,12 +119,13 @@
 /* End section */
 #end{
     display: grid;
-    grid-template-columns:30px auto 30px;
+    grid-template-columns:30px 1fr 30px;
     place-content: center;
+    max-width: var(--vw);
 }
 #end section{
     grid-column: 2/3;
-    width:1040px;
+    width:100%;
     display: grid;
     grid-template-columns: repeat(2,50%);
     padding:0 10px 50px;
@@ -158,7 +159,7 @@
     grid-row:1/2;
     grid-column: 1/3;
     z-index: 2;
-    max-width:calc(var(--winWidth) - 120px);
+    max-width:calc(var(--vw) - 120px);
     justify-self: center;
     margin-bottom: 0;
 }
