--- a/styles/secNav.css
+++ b/styles/secNav.css
@@ -1,8 +1,8 @@
 /* Side Navigation */
 .secWNav{
     display: grid;
-    grid-template-columns: 30px auto 30px;
-    width: var(--winWidth);
+    grid-template-columns: 30px 1fr 30px;
+    width: var(--vw);
 }
 
 .secWNav section{grid-column: 2/3;}
